--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="black">#000000</color>
+    <color name="black">#000</color>
+    <color name="black_3">#3000</color>
+    <color name="black_1">#1000</color>
+
+
 </resources>
